tests/baselines/reference/ES5For-of26(target=es2015).errors.txt
ES5For-of26.ts(1,10): error TS2488: Type 'number' must have a '[Symbol.iterator]()' method that returns an iterator.


==== ES5For-of26.ts (1 errors) ====
    for (var [a = 0, b = 1] of [2, 3]) {
             ~~~~~~~~~~~~~~
!!! error TS2488: Type 'number' must have a '[Symbol.iterator]()' method that returns an iterator.
        a;
        b;
    }